# clh_convnet

./: .gitignore  LICENSE  cmakelists.txt
src/: .ConvNet.cpp.swo  CMakeLists.txt  ConvNet.cpp
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.h
src/neural_net/: CMakeLists.txt  layer.h
